# OpenHands

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIRED_FEATURES.md  DESIRED_FEATURES_POINT1_IMPLEMENTATION_PLAN.md  Development.md  IMPLEMENTATION_FEATURE_2.md  IMPLEMENTATION_SUMMARY.md  README.md  config.template.toml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.yml  feature_request.yml
.github/workflows/: ghcr-build.yml  pr-review-by-openhands.yml
containers/: build.sh
containers/app/: Dockerfile  entrypoint.sh
containers/dev/: compose.yml
containers/runtime/: config.sh  entrypoint.sh
docs/: ARCHITECTURE_DIAGRAM.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  DESIRED_FEATURES_POINT1_IMPLEMENTATION_PLAN.md  FILE_VS_POSTGRES_STORAGE.md
enterprise/: AGENTS.md  Dockerfile  README.md  allhands-realm-github-provider.json.tmpl  downgrade_migrated_users.py  pyproject.toml  saas_server.py
enterprise/doc/: MICROSOFT_ENTRA_OAUTH2_SETUP.md
enterprise/enterprise_local/: README.md  convert_to_env.py  decrypt_env.sh
enterprise/integrations/: manager.py  resolver_context.py  store_repo_utils.py  stripe_service.py  types.py  utils.py  v1_utils.py
enterprise/integrations/github/: data_collector.py  github_manager.py  github_service.py  github_solvability.py  github_v1_callback_processor.py  github_view.py
enterprise/integrations/gitlab/: gitlab_manager.py  gitlab_service.py  webhook_installation.py
enterprise/integrations/jira/: jira_manager.py  jira_payload.py  jira_types.py  jira_view.py
enterprise/integrations/jira_dc/: jira_dc_manager.py
enterprise/integrations/linear/: linear_manager.py
enterprise/integrations/slack/: slack_manager.py  slack_types.py  slack_v1_callback_processor.py  slack_view.py
enterprise/migrations/versions/: 084_create_device_codes_table.py  085_add_public_column_to_conversation_metadata.py  086_add_v1_column_to_slack_conversation.py  087_bump_condenser_defaults.py  088_create_blocked_email_domains_table.py  089_create_invite_requests_table.py  089_create_org_tables.py  090_add_git_user_fields_to_user.py
enterprise/server/: clustered_conversation_manager.py  config.py  constants.py  email_validation.py  middleware.py  saas_monitoring_listener.py  saas_nested_conversation_manager.py
enterprise/server/auth/: constants.py  domain_blocker.py  email_validation.py  gitlab_sync.py  recaptcha_service.py  saas_user_auth.py  token_manager.py
enterprise/server/conversation_callback_processor/: github_callback_processor.py
enterprise/server/mcp/: mcp_config.py
enterprise/server/routes/: api_keys.py  auth.py  billing.py  debugging.py  email.py  event_webhook.py  github_proxy.py  invite.py  oauth_device.py  org_models.py  orgs.py
enterprise/storage/: api_key_store.py  blocked_email_domain.py  blocked_email_domain_store.py  conversation_callback.py  database.py  device_code.py  device_code_store.py  encrypt_utils.py  gitlab_webhook_store.py  invite_request.py  invite_request_store.py  jira_integration_store.py  lite_llm_manager.py  org.py  org_member_store.py  org_service.py  org_store.py  role_store.py  saas_conversation_store.py  saas_secrets_store.py  saas_settings_store.py  slack_conversation.py  user.py  user_settings.py  user_store.py
enterprise/sync/: common_room_sync.py  install_gitlab_webhooks.py  test_conversation_count_query.py
frontend/: AGENTS.md  README.md  package-lock.json  package.json  test-utils.tsx  vite.config.ts  vitest.setup.ts
frontend/__tests__/: conversation-local-storage.test.ts  conversation-websocket-handler.test.tsx  posthog-tracking.test.tsx
frontend/src/: routes.ts  tailwind.css
frontend/src/routes/: login.tsx  (+13 more)
frontend/tests/: avatar-menu.spec.ts
helm/: README.md
helm/openhands/: Chart.yaml  README.md  values.yaml
openhands/: AGENTS.md
openhands/agenthub/: AGENTS.md
openhands/app_server/: config.py  shared_conversation_router.py  v1_router.py
openhands/controller/: action_parser.py  agent.py  agent_controller.py  replay.py  stuck.py
openhands/core/: download.py  exceptions.py  logger.py  loop.py  main.py  message.py  message_utils.py  setup.py
openhands/events/: __init__.py  event.py  recall_type.py
openhands/integrations/: provider.py  utils.py
openhands/llm/: AGENTS.md  async_llm.py  bedrock.py  debug_mixin.py  fn_call_converter.py  llm.py  llm_registry.py  llm_utils.py  metrics.py  model_features.py  retry_mixin.py  streaming_llm.py  tool_names.py
openhands/memory/: conversation_memory.py  memory.py
openhands/runtime/: AGENTS.md  __init__.py  action_execution_server.py  base.py  file_viewer_server.py  runtime_status.py
openhands/security/: README.md
openhands/server/: __main__.py  app.py  constants.py  dependencies.py  file_config.py  files.py  listen.py  listen_socket.py  middleware.py  monitoring.py  settings.py  shared.py  static.py  types.py  utils.py
openhands/storage/: README_PERSISTENT_STORAGE.md  redis_cache.py
openhands/utils/: http_session.py  llm.py
scripts/: init-db.sh
skills/: azure-devops-pr-review.md  bmad-adversarial-review.md  bmad-atdd.md  bmad-brainstorming.md  bmad-check-implementation-readiness.md  bmad-ci-setup.md  bmad-code-review-bmad.md  bmad-correct-course.md  bmad-create-agent.md  bmad-create-architecture.md  bmad-create-epics-and-stories.md  bmad-create-module.md  bmad-create-prd.md  bmad-create-product-brief.md  bmad-create-story.md  bmad-create-ux-design.md  bmad-create-workflow.md  bmad-design-thinking.md  bmad-dev-story.md  bmad-document-project.md  bmad-editorial-review-prose.md  bmad-editorial-review-structure.md  bmad-help.md  bmad-innovation-strategy.md  bmad-nfr-assessment.md  bmad-party-mode.md  bmad-problem-solving.md  bmad-qa-automation.md  bmad-quick-dev.md  bmad-quick-spec.md  bmad-research.md  bmad-retrospective.md  bmad-sprint-planning.md  bmad-storytelling.md  bmad-teach-testing.md  bmad-test-automation.md  bmad-test-design.md  bmad-test-framework.md  bmad-test-review.md  bmad-test-traceability.md
tests/: AGENTS.md
tests/unit/: conftest.py
(+519 files in other folders)
